--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,43 @@ body{
 }
 header{
     background: rgba(229, 84, 115, 0.10);
+    height: 850px;
+    width: 100%;
 }
 header > div{
     display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 150px;
+    padding-top: 50px;
+}
+.header-part{
+    width: 50%;
+
+}
+.header-part > h1{
+    font-size: 80px;
+    font-style: normal;
+    font-weight: 800;
+    margin: 0px; 
+}
+.header-part > p{
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;  
+}
+.btn-primary{
+    border-radius: 8px;
+    background: #E55473;
+    border:0;
+    color:white;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 20px 43px;
+}
+.banner-pic{
+    width: 635px;
+    height: 800px;
 }
