--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,10 @@
+/*styles for header*/
 body{
     font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
     margin: 0px;
 }
-header{
-    background: rgba(229, 84, 115, 0.10);
-    height: 850px;
-    width: 100%;
-}
+
 header > div{
     display: flex;
     width: 100%;
@@ -15,6 +12,8 @@ header > div{
     align-items: center;
     padding-left: 150px;
     padding-top: 50px;
+    background: rgba(229, 84, 115, 0.10);
+
 }
 .header-part{
     width: 50%;
@@ -38,21 +37,272 @@ header > div{
     border:0;
     color:white;
     font-size: 20px;
-    font-weight: 700;
-    padding: 20px 43px;
+    font-weight: 400;
+    padding: 10px 10px;
 }
 .banner-pic{
     width: 635px;
     height: 800px;
+    padding-bottom: 0px;
 }
-.featured-flowers{
-    justify-content: center;
-    align-items: center;
-    width: 100%;
 
-} 
-.feature-images{
+/*styles for main Fearured*/
+.featured-image h3{
+    text-decoration: underline;
+}
+.featured{
+    text-align: center;
+    padding-top: 80px;
+}
+.featured-title{
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    
+}
+.featured-paragraph{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+/*extra part*/
+.featured-image {
     display: flex;
-    width: 100%;
+    justify-content: space-evenly; 
+    padding-top: 86px;
+    text-align: center;
+    margin-left: 250px;
+    margin-right: 250px;
+ 
+}
+
+#category-box1{
+    border-radius: 300px 300px 0px 0px;
+    
+    background: rgba(167, 33, 98, 0.15);
+    text-align: center;
+    width: 350px;
+    height: 400px;
+
+    margin: 0 10px; 
+    
+   
+}
+
+#category-box2{
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+    text-align: center;
+    width: 350px;
+    height: 400px;
+     
+}
+
+#category-box3{
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+    text-align: center;
+    width: 350px;
+    height: 400px;
+    margin: 0 10px; 
+}
+.category-image1{
+    width: 250px;
+    height: 300px;
+    padding-top: 100px;
+}
+
+.category h3{
+    margin-top: 10px;
+    text-align: center;
+    color: #272727;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+}
+
+/* Support section*/
+.support{
+height: 200px;
+border-radius: 8px;
+background: rgba(39, 39, 39, 0.05);
+margin: 100px;
+display: flex;
+justify-content: space-evenly;
+padding-top: 86px;
+text-align: center;
+}
+
+.support p{
+    text-decoration: underline;
+}
+.support img{
+    width: 88px;
+    height: 88px;
+    text-align: center;
+}
+
+.support p{
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 35px;
+}
+
+/*Discount section */
+.offer{
+    
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+    display: flex;
+    justify-content: space-around;
+}
+
+.offer-section-text{
+    text-align: center;
+    padding-top: 150px;
+}
+
+.offer-section-text span{
+    color: #E55473;
+}
+
+.offer-title{
+    color: #272727;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.offer-section-text p{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.offer-section-image{
+    padding: 20px;
+}
+
+.offer-section-image img{
+    width: 318px;
+    height: 420px;
+    flex-shrink: 0;
+}
+
+/* Instagram section */
+
+.instagram-images{
+    display: flex;
     justify-content: center;
+    gap: 10px; 
+    margin: 50px 200px;
+}
+
+.instagram-images img{
+    width: 250px;
+    height: 300px;
+}
+
+/*Information section */
+.info{ 
+    background-image: url("../images/Rectangle\ 9.png");
+    background-repeat: no-repeat;
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 80px;
+    margin:50px 140px;
+    height: 449px;
+    border-radius: 8px;
+}
+
+.info h1{
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.info p{
+        color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
+
+.info input{
+    width: 400px; 
+    height: 55px;
+    border-radius: 8px;
+    background: #FFF;
+    padding-left: 20px;
+    border: 0;
+    margin-top: 20px;
+    color: rgba(39, 39, 39, 0.60);
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+/* footer section  */
+.footer-section{
+    padding: 100px 400px;
+    background: #111010;
+    height: 300px;
+    text-align: center;
+    
+}
+
+.footer-section h1{
+    color: #E55473;
+    font-family: Lato;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.footer-section p{
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.footer-section small{
+    color: rgba(255, 255, 255, 0.40);
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.footer-section span{
+    color: #FFF;
 }
