--- a/styles/style.css
+++ b/styles/style.css
@@ -225,8 +225,8 @@ header > div{
     background-repeat: no-repeat;
     text-align: center;
     padding-top: 100px;
-    padding-bottom: 80px;
-    margin:50px 140px;
+    /* padding-bottom: 80px; */
+    margin:50px 240px;
     height: 449px;
     border-radius: 8px;
 }
@@ -319,4 +319,8 @@ line-height: 30px;
 .youtube-video{
     display: flex;
     justify-content: center;
+}
+.youtube-part{
+    padding-bottom: 200px;
+    padding-top: 0px;
 }
